--- a/app/i18n/en-US/overlays.json
+++ b/app/i18n/en-US/overlays.json
@@ -15,6 +15,9 @@
   "Assign and Export Overlay": "Assign and Export Overlay",
   "Assign Vertical Sources to Horizontal Display": "Assign Vertical Sources to Horizontal Display",
   "The below will create a copy of the active scene collection, set the copy as the active collection, and then apply the function.": "The below will create a copy of the active scene collection, set the copy as the active collection, and then apply the function.",
-  "Manage Dual Output Scene": "Manage Dual Output Scene",
-  "Unable to convert dual output collection.": "Unable to convert dual output collection."
+  "Convert Dual Output Scene Collection": "Convert Dual Output Scene Collection",
+  "Unable to convert dual output collection.": "Unable to convert dual output collection.",
+  "Invalid Scene Collection": "Invalid Scene Collection",
+  "Error Converting Dual Output Collection": "Error Converting Dual Output Collection",
+  "Successfully Converted and Exported": "Successfully Converted and Exported"
 }
