--- a/app/i18n/en-US/overlays.json
+++ b/app/i18n/en-US/overlays.json
@@ -16,5 +16,11 @@
   "Assign Vertical Sources to Horizontal Display": "Assign Vertical Sources to Horizontal Display",
   "The below will create a copy of the active scene collection, set the copy as the active collection, and then apply the function.": "The below will create a copy of the active scene collection, set the copy as the active collection, and then apply the function.",
   "Manage Dual Output Scene": "Manage Dual Output Scene",
-  "Unable to convert dual output collection.": "Unable to convert dual output collection."
+  "Unable to convert dual output collection.": "Unable to convert dual output collection.",
+  "Repair finished. See details in the log file": "Repair finished. See details in the log file",
+  "Invalid Scene Collection": "Invalid Scene Collection",
+  "Success": "Success",
+  "Successfully converted scene collection.": "Successfully converted scene collection.",
+  "Convert Dual Output Scene Collection": "Convert Dual Output Scene Collection",
+  "Show Components Library": "Show Components Library"
 }
